--- a/index.css
+++ b/index.css
@@ -1,5 +1,134 @@
-*¨{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    font-family: 'Sora', sans-serif;
+    background-color: #FAFAF9;
+    color: #18181B;
+}
+span.star1-img {
+    height: auto;
+    display: inline-block;
+    margin-bottom: 16px;
+    background-color: #F5C044;
+    border-radius: 50%;
+    color: #FFD700; /* color dorado */
+    padding: 16px;
+}
+img.red-img {
+    height: auto;
+    display: inline-block;
+    margin-right: 16px;
+    
+}
+img.star-img {
+    height: auto;
+    display: inline-block;
+    margin-left: 4px;
+}
+img.stargrey-img{
+    height: auto;
+    display: inline-block;
+    margin-left: 4px;
+}
+
+
+h1{
+    font-family: 'Sora', sans-serif;
+    font-weight: 600;
+    font-size: 2.25rem;
+}
+h2 {
+    font-family: 'Sora', sans-serif;
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #18181B;
+    margin-bottom: 8px;
+}
+p.testmonialpa{
+    font-family: 'Sora', sans-serif;
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    color: #52525A; 
+}
+p.p-item{
+    font-family: 'Sora', sans-serif;
+    font-weight: 400;
+    font-size: 0.875rem;
+    color: #52525A; 
+}
+
+section {
+    max-width: 1136px;
+    width: 100%;
+    margin: 0 auto;
+
+}
+div.testimonials-all {
+    margin-top: 162px;
+    max-width: 100%;
+    display: flex;
+    flex: 1 1 50%;
+    gap: 40px;
+}
+div.text-testimonial {
+    order: 1;
+    width: 100%;
+}
+div.testimoniall-box {
+    width: 100%;
+    display: flex;
+    order:2;
+    gap: 24px;
+    flex-direction: column;
+}
+div.checktestimonial {
+    margin-top: 32px;
+}
+div.checkitem {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 12px;
+}
+div.box-item{
+    width: 65%;
+    gap: 16px;
+    padding: 28px 40px 28px 40px;
+    border-radius: 8px;
+    background-color: #FFFFFF;
+    /* Box-shadow */
+     
+}
+div.box-item:hover {
+    box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.1);
+}
+div.box-item1 {
+    margin-left: 35%;
+}
+div.box-img {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+
+
+
+
+@media (max-width: 1024px) {
+
+    div.testimonials-all {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 15px ;
+    }
 }
